# semantic-code-compression

./: README.md  config.py  main.py  payload.json  pyproject.toml  sample_response.txt  tests.py
ast_based_scoring/: project3_methodology2_ast_based_scoring.ipynb
ast_lsp_heuristic_context_compression/: README.md  __init__.py  eval.py  masking.py  ngram_heuristic_compression.py  project3_methodology1_heuristic_context_compression (1).ipynb  project3_methodology1_heuristic_context_compression.ipynb  project3_methodology_ast_based_scoring.ipynb  prompt.py
ast_lsp_heuristic_context_compression/overview_and_setup/: requirements.txt
ast_lsp_heuristic_context_compression/templates/: example_input.yaml  prompt_template.yaml
ast_lsp_heuristic_context_compression/utils/: ASTutils.py  helper_funcs.py
example_programs/: fastapi_todo.py  pyfiglet.py  sample.py
generating_embeddings/: .gitignore  main.py  pyproject.toml  requirements.txt  vectordb.py
helpers/: __init__.py  llm.py  vizualizer.py
utils/: __init__.py  file_processor.py  tokens_counter.py
